# meagre-crowd

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NEWS  README  TODO  astylerc  atlocal.in  autogen  autogen.sh  collect_results  configure  configure.ac  get_dependancies  get_dependencies  launch_jobs  testsuite.at
m4/: acx_mpi.m4  ax_matlab.m4  ax_matlab_arch.m4  ax_matlab_version.m4  ax_mexext.m4  ax_mexopts.m4  matlabarch.m4  matlabdir.m4  matlabver.m4  mexext.m4  simulink.m4
src/: args.c  args.h  config.h  config.h.in  data.c  data.h  file.c  file.h  matrix.c  matrix.h  matrix_share.c  matrix_share.h  mcsolve.c  meagre-crowd.c  perftimer.c  perftimer.h  solver.c  solver.h  solver_cholmod.c  solver_cholmod.h  solver_lookup.h  solver_mumps.c  solver_mumps.h  solver_paradiso.c  solver_paradiso.h  solver_pardiso.c  solver_pardiso.h  solver_superlu_dist.c  solver_superlu_dist.h  solver_taucs.c  solver_taucs.h  solver_umfpack.c  solver_umfpack.h  solver_wsmp.c  solver_wsmp.h  solvers.c  solvers.h
test/: Makefile  file.c  mumps-file.c  unit_perftimer.c
tests/: ans1.mm  file.c  hello-pardiso.c  hello-umfpack.c  helloworld-mpi.c  helloworld-mumps.c  helloworld-wsmp.c  matlab_unsym.m  mumps-file.c  rhs1.mm  sym-default-ans.mm  sym-rhs1-ans.mm  sym.mm  sym_posdef-default-ans.mm  sym_posdef-rhs1-ans.mm  sym_posdef.mm  unit-matrix.c  unit-perftimer.c  unsym-rhs1-ans.mm  unsym4.mat  unsym6.mat  unsym6sp.mat  unsym7.mat  unsym73.mat  unsym73sp.mat  unsym7sp.mat
